Little docs fixes

--- a/Dokumentacja/tex/rozdzial1.tex
+++ b/Dokumentacja/tex/rozdzial1.tex
@@ -33,9 +33,9 @@
 	\item spalone kalorie, 
 \end{itemize}
 
-\hspace{0.60cm}Oprócz tego na stronie treningu powinna znajdować się mapa, na której będzie pokazana aktualna pozycja uzytkownika, oraz przebyta trasa.
+\hspace{0.60cm}Oprócz tego na stronie treningu Rys. \ref{rys:rysunek001} (s. \pageref{rys:rysunek001}) powinna znajdować się mapa, na której będzie pokazana aktualna pozycja uzytkownika, oraz przebyta trasa.
 
-\hspace{0.60cm}Po zakończonym treningu aplikacja ma pokazać całą przebytą trasę na mapie oraz dać dostęp do szczegółowych statystyk treningu. Użytkownik ma mieć podgląd na wszystkie możliwe dane.
+\hspace{0.60cm}Po zakończonym treningu aplikacja ma pokazać całą przebytą trasę na mapie oraz dać dostęp do szczegółowych statystyk treningu Rys. \ref{rys:rysunek002} (s. \pageref{rys:rysunek002}). Użytkownik ma mieć podgląd na wszystkie możliwe dane.
 
 \begin{figure}[!htb]
 	\centering
@@ -53,16 +53,17 @@
 	\end{minipage}
 \end{figure}
 
-\hspace{0.60cm}Ekran krokomierza ma zawierać tylko liczbę zrobionych w biezacym dniu kroków.
+\hspace{0.60cm}Ekran krokomierza Rys. \ref{rys:rysunek003} (s. \pageref{rys:rysunek003}) ma zawierać tylko liczbę zrobionych w biezacym dniu kroków.
 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.2\linewidth]{rys/ekran_krokomierza.png}
-	\caption{Ekran treningu}
+	\caption{Ekran krokomierza}
 	\label{rys:rysunek003}
 \end{figure}
 
 
 \hspace{0.60cm}Na dole aplikacji ma się znajdować menu za pomocą którego użytkownik może się przełączać pomiędzy ekranem krokomierza, treningu, odbytymi treningami i ustawieniami.
- 
+
+\hspace{0.60cm}Ekran zawierający historię odbytych treningów powinien przedstawiać je w postaci list. Ustawienia też powinny być przedstawione w postaci listy. 
  
