--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -23,6 +23,6 @@ W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane 
 
 \subsection{Mapy Google}  %2.5
 
-\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. 
+\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. \\
 
 
