--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -3,7 +3,24 @@
 
 \subsection{Środowisko programistyczne}  %2.1
 
-\hspace{1.2cm}Aplikacja zostanie napisana korzystając z Xamarin.Forms. Jest to środowisko umożliwiające tworzenie aplikacji za pomocą języka XAML oraz kodu w języku C\#. 
+\hspace{1.2cm}Aplikacja zostanie napisana korzystając z platformy Xamarin.Forms. Jest to środowisko umożliwiające tworzenie aplikacji za pomocą języka XAML oraz kodu w języku C\#.
+Xamarin to platforma typu open source do tworzenia nowoczesnych i wydajnych aplikacji dla systemów iOS, Android i Windows za pomocą platformy .NET. Xamarin to warstwa abstrakcji, która zarządza komunikacją udostępnionego kodu z bazowym kodem platformy. Xamarin.Forms umożliwia deweloperom tworzenie aplikacji Xamarin.iOS, Xamarin.Android i Windows z pojedynczej udostępnionej bazy kodu. Xamarin.Forms Umożliwia deweloperom tworzenie interfejsów użytkownika w języku XAML z użyciem kodu w języku C\#. Te interfejsy użytkownika są renderowane jako wydajne kontrolki natywne na każdej platformie. \\ Oto kilka przykładów funkcji udostępnianych przez Xamarin.Forms :
+
+\begin{itemize}
+	\item Język interfejsu użytkownika XAML
+	\item Powiązanie danych
+	\item Gestów
+	\item Efekty
+	\item Style
+\end{itemize}
+
+\hspace{0.60cm}Dodatkowo, w celu koordynacji wykonywania projektu, organizacji kodu oraz ogólnego wspomagania pracy wykorzystany zostanie system kontroli wersji oprogramowania Git. Zapewnia on:
+
+\begin{itemize}
+	\item Dobre wsparcie dla rozgałęzionego procesu tworzenia oprogramowania: jest dostępnych kilka algorytmów łączenia zmian z dwóch gałęzi, a także możliwość dodawania własnych algorytmów,
+	\item Każdy programista posiada własną kopię repozytorium, do której może zapisywać zmiany bez połączenia z siecią; następnie zmiany mogą być wymieniane między lokalnymi repozytoriami. Programista może także dodawać oraz usuwać gałęzie, 
+	\item Efektywną pracę z dużymi projektami, jest o rzędy wielkości szybszy niż niektóre konkurencyjne rozwiązania
+\end{itemize}
 
 \subsection{Ogólny wygląd interfejsu}  %2.2
 
@@ -11,18 +28,22 @@
 
 \subsection{Krokomierz}  %2.3
 
-\hspace{0.60cm}W zakładce Kroki aplikacja będzie wyświetlała, korzystając z odpowiedniego sensora (krokomierza), liczbę kroków jaką użytkownik wykonał od rozpoczęcia treningu. Moduł krokomierza jest wymagany by zapobiegać oszustom, a tym samym zwiększyć wiarygodność aplikacji. Zastosowanie krokomierza umożliwia wykluczenie wpisów podejrzanych, które mogłyby wystąpić, gdyby użytkownik jechał na przykład rowerem lub samochodem. Takie rozwiązanie jest normalne w tego typu aplikacjach. Oprogramowanie Android w wersjach 4.4 i wyższych posiada wsparcie dla sensorów takich jak detektor kroków oraz licznik kroków. Kroki podczas biegu są łatwiejsze do odróżnienia od tych podczas zwykłego spaceru ze względu na bardziej wyraźne oddziaływanie na sensory. Tak więc jest duże prawdopodobieństwo, że krokomierz będzie bardzo dokładnie mierzył kroki, a system będzie działał niezawodnie w wyjątkowych sytuacjach.
+\hspace{0.60cm}W zakładce Kroki aplikacja będzie wyświetlała, korzystając z odpowiedniego sensora (krokomierza), liczbę kroków jaką użytkownik wykonał od rozpoczęcia treningu. Moduł krokomierza jest wymagany by zwiększyć wiarygodność aplikacji. Zastosowanie krokomierza umożliwia wykluczenie wpisów podejrzanych, które mogłyby wystąpić, gdyby użytkownik jechał na przykład rowerem lub samochodem. Takie rozwiązanie jest normalne w tego typu aplikacjach. Oprogramowanie Android w wersjach 4.4 i wyższych posiada wsparcie dla sensorów takich jak detektor kroków oraz licznik kroków. Kroki podczas biegu są łatwiejsze do odróżnienia od tych podczas zwykłego spaceru ze względu na bardziej wyraźne oddziaływanie na sensory. Tak więc jest duże prawdopodobieństwo, że krokomierz będzie bardzo dokładnie mierzył kroki, \\a system będzie działał niezawodnie w wyjątkowych sytuacjach.
 
 \subsection{Moduł GPS}  %2.4
 
-\hspace{0.60cm}W zakładce Trening aplikacja będzie wyświetlała pomiar biegu użytkownika, \\ a dokładniej mówiąc pomiar przebiegniętego dystansu, prędkości biegu w danej chwili oraz czasu . Odbywa się to na podstawie informacji \\ o jego pozycji. Można to zrealizować na kilka sposobów. Te sposoby to: wykorzystanie globalnego systemu pozycjonowania (GPS), technologia lokalizacji wieży komórkowej lub lokalizacja za pomocą WiFi Powinno się wybrać sposób najbardziej odpowiedni dla naszej aplikacji biorąc pod uwagę przede wszystkim środowisko \\ w jakim będzie ona używana. \\ 
-W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane lokalizycyjne, wykorzystuje najwięcej mocy i działa najlepiej na zewnątrz, co w naszym przypadku jest kluczowe dla odpowiedniego działania aplikacji. Zakładając, że użytkownik przemieszcza się, można zdefiniować jego pozycję z dokładnością do około 6 metrów.
+\hspace{0.60cm}W zakładce Trening aplikacja będzie wyświetlała pomiar biegu użytkownika, \\ a dokładniej mówiąc pomiar przebiegniętego dystansu, prędkości biegu w danej chwili oraz czasu . Odbywa się to na podstawie informacji o jego pozycji. Można to zrealizować na kilka sposobów. Te sposoby to: wykorzystanie globalnego systemu pozycjonowania (GPS), technologia lokalizacji wieży komórkowej lub lokalizacja za pomocą WiFi Powinno się wybrać sposób najbardziej odpowiedni dla naszej aplikacji biorąc pod uwagę przede wszystkim środowisko w jakim będzie ona używana. \\ 
+W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane lokalizycyjne, wykorzystuje najwięcej mocy i działa najlepiej na zewnątrz, co w naszym przypadku jest kluczowe dla odpowiedniego działania aplikacji. Zakładając, że użytkownik przemieszcza się, można zdefiniować jego pozycję z dokładnością od około 6 do 100 metrów.
 
 \hspace{0.60cm}Aplikacja z obsługą lokalizacji wymaga dostępu do czujników sprzętowych urządzenia w celu odbierania danych GPS. Dostęp jest kontrolowany za pomocą odpowiednich uprawnień w manifeście Androida aplikacji (plik AndroidManifest.xml). Dostępne są dwa uprawnienia: \\ \textit{ACCESS\_COARSE\_LOCATION} - zapewnia aplikacji dostęp do dostawcy GPS \\ oraz 
 \textit{ACCESS\_FINE\_LOCATION} - umożliwia aplikacji dostęp do sieci komórkowej \\ i WiFi lokalizacji. Wymagane dla dostawcy sieci gdy ACCESS\_COARSE\_LOCATION jest nieustawiony.
 
 \subsection{Mapy Google}  %2.5
 
-\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. Dostęp do Map Google jest możliwy dzięki API (Maps SDK for Android) udostępnianego przez Google. Dostęp \\ do tego API jest uzyskiwany z kluczem API, który został wygenerowany w panelu Google Cloud API. Możliwość wyświetlania pobranej mapy w aplikacji jest możliwa korzystając z pakietu NuGet Xamarin.Forms.Maps. Na mapie będzie także rysowana linią (klasa Polyline z wyżej wymienionego pakietu) trasa przebyta w trakcie treningu. 
+\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. Dostęp do Map Google jest możliwy dzięki API (Maps SDK for Android) udostępnianego przez Google. Dostęp do tego API jest uzyskiwany z kluczem API, który został wygenerowany w panelu Google Cloud API. Możliwość wyświetlania pobranej mapy w aplikacji jest możliwa korzystając z pakietu NuGet Xamarin.Forms.Maps. Na mapie będzie także rysowana linią (klasa Polyline z wyżej wymienionego pakietu) trasa przebyta w trakcie treningu. 
+
+\subsection{Baza danych SQLite}
+
+\hspace{0.60cm}SQLite to mała, szybka i przystosowana do osadzania baza danych SQL oparta na systemie plików typu open source. Nie posiada oddzielnego komponentu serwerowego, jak tradycyjne bazy danych.
 
 
