--- a/Dokumentacja/raport6.tex
+++ b/Dokumentacja/raport6.tex
@@ -64,10 +64,11 @@
 \section{Wykonane zadania}
 
 \textit{Poprawa i uzupełnienie dokumentacji.} \\
+\textit{Dodanie ekranu powitalnego.}
 
 \section{Niewykonane zadania}
 
-\textit{Działanie krokomierza w tle}
+\textit{Działanie krokomierza w tle.}
 
 \section{Napotkane problemy}
 
