--- a/Dokumentacja/tex/rozdzial4.tex
+++ b/Dokumentacja/tex/rozdzial4.tex
@@ -296,6 +296,8 @@ Kod \ref{lst:listing-cpp12} wykonuje zapis danych treningu do bazy danych:
 	}
 \end{lstlisting}
 
+\subsubsection{Zakładka Kroki} %4.1.2
+
 Kod \ref{lst:listing-cpp13} implementuje modułu Step\_Counter, wykorzystujący czujnik akcelerometr:
 \begin{lstlisting}[caption=Krakomierz i akcelerometr, label={lst:listing-cpp13}, language=C++]
 	public partial class StepCounter : ContentPage
