--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -43,6 +43,6 @@ W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane 
 
 \subsection{Baza danych SQLite} %2.6
 
-\hspace{0.60cm}SQLite to mała, szybka i przystosowana do osadzania baza danych SQL oparta na systemie plików typu open source. Nie posiada oddzielnego komponentu serwerowego, jak tradycyjne bazy danych.
+\hspace{0.60cm}SQLite to mała, szybka i przystosowana do osadzania baza danych SQL oparta na systemie plików typu open source. Nie posiada oddzielnego komponentu serwerowego, jak tradycyjne bazy danych. Jest ona darmowa i zawiera wszystko co najważniejsze w relacyjnej bazie danych. Jest ona najczęściej instalowana na serwerach. Pozwala zgrabnie zarządzać użytkownikami i świetnie nadaje się do małych oraz średniej wielkości projektów. Znajduje się w dokładnie jednym pliku. Bardzo często wybierana jako baza dla aplikacji iOS oraz Android. Wspiera SQL. Sprawdza się na urządzeniach z ograniczoną możliwościami instalacji dodatkowego oprogramowania, takimi jak smartfony, dekodery i telewizory. Również jest świetnym silnikiem bazodanowym dla witryn o niskim i średnim ruchu. Przy odpowiedniej konfiguracji jest wydajny i może pełnić rolę zarówno silnika do analizy dużego zbioru informacji jak i cache serwer dla danych z częstym odczytem.
 
 
