--- a/Dokumentacja/tex/rozdzial4.tex
+++ b/Dokumentacja/tex/rozdzial4.tex
@@ -295,7 +295,7 @@ Listing \ref{lst:listing-cpp12} wykonuje zapis danych treningu do bazy danych:
 
 \subsubsection{Zakładka Kroki} %4.1.2
 
-\hspace{0.60cm}Listing \ref{lst:listing-cpp13} implementuje modułu Step\_Counter, wykorzystujący czujnik akcelerometr. W lini 14 przypisujemy funkcję która ma być wywołana kiedy akcelerometr odczyta, że nastapiła zmiana. Na początku metody Accelerometer\_ReadingChanged zapisujemy dane z akcelerometra oraz wyliczamy wektor przesunięcia korzystając z~twierdzenia Pitagorasa. Od lini 32 następuje sprawdzenie warunków koniecznych od ustalenia czy zaszedł krok.
+\hspace{0.60cm}Listing \ref{lst:listing-cpp13} implementuje moduł Step\_Counter, wykorzystujący czujnik akcelerometr. W lini 14 przypisujemy funkcję która ma być wywołana kiedy akcelerometr odczyta, że nastapiła zmiana. Na początku metody Accelerometer\_ReadingChanged zapisujemy dane z akcelerometra oraz wyliczamy wektor przesunięcia korzystając z~twierdzenia Pitagorasa. Od lini 32 następuje sprawdzenie warunków koniecznych od ustalenia czy zaszedł krok.
 \begin{lstlisting}[caption=Krakomierz i akcelerometr, label={lst:listing-cpp13}, language=C++]
 	public partial class StepCounter : ContentPage
 	{
